--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/Registration.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/Registration.cshtml
@@ -12,81 +12,106 @@
 </style>
 
 <br />
-<div class="row">
-    <div class="col-md-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title" id="registrationhead">Register Now</h3>
-            </div>
-            <div class="panel-body">
-                <div class="col-md-6 form-group">
-                    Sponsor Id <span style="color: red">*</span>
-                    @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @onchange = "getsponsordetails(this);" })
-                </div>
-                <div class="col-md-6 form-group">
-                    Sponsor Name <span style="color: red">*</span>
-                    @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @readonly = "readonly" })
-                </div>
+<div class="app-content content">
+    <div class="content-overlay"></div>
+    <div class="header-navbar-shadow"></div>
+    <div class="content-wrapper">
+        <div class="content-header row">
+        </div>
+        <div class="content-body">
+            <!-- users edit start -->
+            <section class="users-edit">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-body">
+                            <ul class="nav nav-tabs mb-3" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                       aria-controls="account" role="tab" aria-selected="true">
+                                        <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Registration</span>
+                                    </a>
+                                </li>
+                               
+                            </ul>
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+                                   
+                                  
+                                        <div class="row">
+                                            <div class="col-md-6 form-group">
+                                                Sponsor Id <span style="color: red">*</span>
+                                                @Html.TextBoxFor(m => m.SponsorId, new { @class = "form-control", @onchange = "getsponsordetails(this);" })
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                Sponsor Name <span style="color: red">*</span>
+                                                @Html.TextBoxFor(m => m.SponsorName, new { @class = "form-control", @readonly = "readonly" })
+                                            </div>
+                                            <div class="col-md-12 form-group">
+                                                Leg <span style="color: red">*</span> &nbsp;&nbsp;
+                                                <input type="radio" value="Left" checked="checked" id="left" name="Leg" />
+                                                Left &nbsp;&nbsp;
+                                                <input type="radio" value="Right" id="right" name="Leg" />
+                                                Right
+                                            </div>
 
-                <div class="col-md-12 form-group">
-                    Leg <span style="color: red">*</span> &nbsp;&nbsp;
-                    <input type="radio" value="Left" checked="checked" id="left" name="Leg" />
-                    Left &nbsp;&nbsp;
-                    <input type="radio" value="Right" id="right" name="Leg" />
-                    Right
-                </div>
+                                            <div class="col-md-6 form-group">
+                                                First Name <span style="color: red">*</span>
+                                                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @Placeholder = "First Name" })
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                Last Name
+                                                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @Placeholder = "Last Name" })
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                Email Id
+                                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @Placeholder = "Email id" })
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                Mobile No <span style="color: red">*</span>
+                                                @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control", @Placeholder = "Mobile No", @Maxlength = "10", @onkeypress = "return isNumberKey(event);" })
+                                            </div>
 
-                <div class="col-md-6 form-group">
-                    First Name <span style="color: red">*</span>
-                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", @Placeholder = "First Name" })
-                </div>
-                <div class="col-md-6 form-group">
-                    Last Name
-                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", @Placeholder = "Last Name" })
-                </div>
-                <div class="col-md-6 form-group">
-                    Email Id
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @Placeholder = "Email id" })
-                </div>
-                <div class="col-md-6 form-group">
-                    Mobile No <span style="color: red">*</span>
-                    @Html.TextBoxFor(m => m.MobileNo, new { @class = "form-control", @Placeholder = "Mobile No", @Maxlength = "10", @onkeypress = "return isNumberKey(event);" })
-                </div>
+                                            <div class="col-md-6 form-group">
+                                                Gender
+                                                @Html.DropDownListFor(m => m.Gender, new SelectList(ViewBag.ddlgender, "Value", "Text"), new { @class = "form-control" })
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                Pan Card
+                                                @Html.TextBoxFor(m => m.PanCard, new { @class = "form-control", @Placeholder = "Pan Card", @Maxlength = "10", @onchange = "return validatepan(event);" })
+                                            </div>
+                                            <div class="col-md-12 form-group">
+                                                Address
+                                                @Html.TextAreaFor(m => m.Address, new { @class = "form-control", @Placeholder = "Address" })
+                                            </div>
+                                            <div class="col-md-4 form-group">
+                                                Pincode
+                                                @Html.TextBoxFor(m => m.PinCode, new { @class = "form-control", @Placeholder = "PinCode", @onchange = "return getstatecity();" })
+                                            </div>
+                                            <div class="col-md-4 form-group">
+                                                State
+                                                @Html.TextBoxFor(m => m.State, new { @class = "form-control", @Placeholder = "State", @Disabled = "disabled" })
+                                            </div>
+                                            <div class="col-md-4 form-group">
+                                                City
+                                                @Html.TextBoxFor(m => m.City, new { @class = "form-control", @Placeholder = "City", @Disabled = "disabled" })
+                                            </div>
+                                            <div class="col-md-6 form-group">
+                                                <input type="button" id="Confirm" onclick="return confirmregistration();" class="btn btn-success" name="Confirm" value="Confirm">
+                                                <input type="button" id="Register" onclick="return saveregistration();" class="btn btn-success" style="display: none" name="Register" value="Register">
+                                                <input type="button" id="Edit" onclick="editregistration();" style="display: none" class="btn btn-info" name="Edit" value="Edit">
+                                                <br />
 
-                <div class="col-md-6 form-group">
-                    Gender
-                    @Html.DropDownListFor(m => m.Gender, new SelectList(ViewBag.ddlgender, "Value", "Text"), new { @class = "form-control" })
+                                            </div>
+                                            <br />
+                                            <p style="color: red">@TempData["Registration"] </p>
+                                        </div>
+                                   
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-6 form-group">
-                    Pan Card
-                    @Html.TextBoxFor(m => m.PanCard, new { @class = "form-control", @Placeholder = "Pan Card", @Maxlength = "10", @onchange = "return validatepan(event);" })
-                </div>
-                <div class="col-md-12 form-group">
-                    Address
-                    @Html.TextAreaFor(m => m.Address, new { @class = "form-control", @Placeholder = "Address" })
-                </div>
-                <div class="col-md-4 form-group">
-                    Pincode
-                    @Html.TextBoxFor(m => m.PinCode, new { @class = "form-control", @Placeholder = "PinCode", @onchange = "return getstatecity();" })
-                </div>
-                <div class="col-md-4 form-group">
-                    State
-                    @Html.TextBoxFor(m => m.State, new { @class = "form-control", @Placeholder = "State", @Disabled = "disabled" })
-                </div>
-                <div class="col-md-4 form-group">
-                    City
-                    @Html.TextBoxFor(m => m.City, new { @class = "form-control", @Placeholder = "City", @Disabled = "disabled" })
-                </div>
-                <div class="col-md-6 form-group">
-                    <input type="button" id="Confirm" onclick="return confirmregistration();" class="btn btn-success" name="Confirm" value="Confirm">
-                    <input type="button" id="Register" onclick="return saveregistration();" class="btn btn-success" style="display: none" name="Register" value="Register">
-                    <input type="button" id="Edit" onclick="editregistration();" style="display: none" class="btn btn-info" name="Edit" value="Edit">
-                    <br />
-
-                </div>
-                <br />
-                <p style="color: red">@TempData["Registration"] </p>
-            </div>
+            </section>
         </div>
     </div>
 </div>
