--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -262,9 +262,9 @@
         <div class="navbar-header">
             <ul class="nav navbar-nav flex-row">
                 <li class="nav-item mr-auto">
-                    <a class="navbar-brand" href="index-2.html">
+                    <a class="navbar-brand" href="/User/AssociateDashBoard">
                         <div class="brand-logo"></div>
-                        <h2 class="brand-text mb-0">Vuexy</h2>
+                        <h2 class="brand-text mb-0">HM Green City</h2>
                     </a>
                 </li>
                 <li class="nav-item nav-toggle"><a class="nav-link modern-nav-toggle pr-0" data-toggle="collapse"><i class="feather icon-x d-block d-xl-none font-medium-4 primary toggle-icon"></i><i class="toggle-icon feather icon-disc font-medium-4 d-none d-xl-block collapse-toggle-icon primary" data-ticon="icon-disc"></i></a></li>
@@ -922,9 +922,7 @@
     </div>
     <!-- End: Customizer-->
     <!-- Buynow Button-->
-    <div class="buy-now">
-        <a href="https://1.envato.market/vuexy_admin" target="_blank" class="btn btn-danger">Buy Now</a>
-    </div>
+   
     <div class="sidenav-overlay"></div>
     <div class="drag-target"></div>
     <!-- BEGIN: Footer-->
