--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/AssociateDashBoard.cshtml
@@ -158,93 +158,99 @@
 
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="clip-users-2"></i> Investment Details
-
+                <div class="col-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="card-title">Investment Details</h4>
                         </div>
-                        <div class="panel-body panel-scroll ps-container ps-theme-default ps-active-y" style="height:300px" data-ps-id="dd7857d5-15b2-fcd8-16a1-51130e44d04e">
-                            <table id="example23" class="table data-list-view dataTable no-footer dt-checkboxes-select">
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>Product Name</th>
-                                        <th>Amount</th>
-                                        <th>Status</th>
+                        <div class="card-content">
+                           
+                            <div class="table-responsive">
+                                <table class="table mb-0">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Sr No.</th>
+                                            <th>Product Name</th>
+                                            <th>Amount</th>
+                                            <th>Status</th>
 
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lstinvestment != null)
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @if (Model != null)
                                         {
-                                            int i = 1;
-                                            foreach (var Item in Model.lstinvestment)
+                                            if (Model.lstinvestment != null)
                                             {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>@Item.ProductName</td>
-                                                    <td>@Item.Amount</td>
-                                                    <td>@Item.Status</td>
+                                                int i = 1;
+                                                foreach (var Item in Model.lstinvestment)
+                                                {
+                                                    <tr class="text-left">
+                                                        <td>@i</td>
+                                                        <td>@Item.ProductName</td>
+                                                        <td>@Item.Amount</td>
+                                                        <td>@Item.Status</td>
 
 
-                                                </tr>
-                                                i++;
+                                                    </tr>
+                                                    i++;
+                                                }
+
                                             }
-
                                         }
-                                    }
 
-                                </tbody>
-                            </table>
-
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <i class="clip-users-2"></i> Total Business
-
+                
+                <div class="col-6">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4 class="card-title">Total Business</h4>
                         </div>
-                        <div class="panel-body panel-scroll ps-container ps-theme-default ps-active-y" style="height:300px" data-ps-id="dd7857d5-15b2-fcd8-16a1-51130e44d04e">
-                            <table id="example22" class="table data-list-view dataTable no-footer dt-checkboxes-select">
-                                <thead>
-                                    <tr>
-                                        <th>Team</th>
-                                        <th>Total</th>
-                                        <th>Paid</th>
-                                        <th>C/F</th>
+                        <div class="card-content">
 
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr class="text-left">
-                                        <td>Left</td>
-                                        <td>@ViewBag.TotalBusinessLeft</td>
-                                        <td>@ViewBag.PaidBusinessLeft</td>
-                                        <td>@ViewBag.CarryLeft</td>
+                            <div class="table-responsive">
+                                <table class="table mb-0">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th>Team</th>
+                                            <th>Total</th>
+                                            <th>Paid</th>
+                                            <th>C/F</th>
 
-
-                                    </tr>
-                                    <tr class="text-left">
-                                        <td>Right</td>
-                                        <td>@ViewBag.TotalBusinessRight</td>
-                                        <td>@ViewBag.PaidBusinessRight</td>
-                                        <td>@ViewBag.CarryRight</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="text-left">
+                                            <td>Left</td>
+                                            <td>@ViewBag.TotalBusinessLeft</td>
+                                            <td>@ViewBag.PaidBusinessLeft</td>
+                                            <td>@ViewBag.CarryLeft</td>
 
 
-                                    </tr>
+                                        </tr>
+                                        <tr class="text-left">
+                                            <td>Right</td>
+                                            <td>@ViewBag.TotalBusinessRight</td>
+                                            <td>@ViewBag.PaidBusinessRight</td>
+                                            <td>@ViewBag.CarryRight</td>
 
-                                </tbody>
-                            </table>
 
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
+                
             </div>
+
+            
         </section>
         <!-- Dashboard Analytics end -->
     </div>
