--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Layout.cshtml
@@ -450,47 +450,82 @@
             <ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
 
                 <li class=" nav-item">
-                    <a href="app-email.html"><i class="feather icon-mail"></i><span class="menu-title" data-i18n="Email">Dashboard</span></a>
+                    <a href="/User/AssociateDashBoard"><i class="feather icon-mail"></i><span class="menu-title" data-i18n="Email">Dashboard</span></a>
                 </li>
+
                 <li class=" nav-item">
-                    <a href="app-chat.html"><i class="feather icon-message-square"></i><span class="menu-title" data-i18n="Chat">Registration</span></a>
+                    <a href="/User/Registration"><i class="feather icon-message-square"></i><span class="menu-title" data-i18n="Chat">Registration</span></a>
                 </li>
+
                 <li class=" nav-item">
-                    <a href="app-todo.html"><i class="feather icon-check-square"></i><span class="menu-title" data-i18n="Todo">Top Up List</span></a>
+                    <a href="/User/TopupList"><i class="feather icon-check-square"></i><span class="menu-title" data-i18n="Todo">Top Up List</span></a>
                 </li>
 
                 <li class=" nav-item">
                     <a href="#"><i class="feather icon-shopping-cart"></i><span class="menu-title" data-i18n="Ecommerce">Profile</span></a>
                     <ul class="menu-content">
                         <li>
-                            <a href="app-ecommerce-shop.html"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Shop">View</span></a>
+                            <a href="/User/ViewProfile"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Shop">View</span></a>
                         </li>
                         <li>
-                            <a href="app-ecommerce-details.html"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Details">Upload KYC</span></a>
+                            <a href="/KYCDocuments/KYCDocuments"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Details">Upload KYC</span></a>
                         </li>
                         <li>
-                            <a href="app-ecommerce-wishlist.html"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Wish List">Change Password</span></a>
+                            <a href="/Profile/ChangePassword"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Wish List">Change Password</span></a>
                         </li>
 
                     </ul>
                 </li>
+
                 <li class=" nav-item">
-                    <a href="#"><i class="feather icon-user"></i><span class="menu-title" data-i18n="User">User</span></a>
+                    <a href="#"><i class="feather icon-user"></i><span class="menu-title" data-i18n="User">Team</span></a>
                     <ul class="menu-content">
                         <li>
-                            <a href="app-user-list.html"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="List">List</span></a>
+                            <a href="/User/BinaryTree"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="List">Binary Tree</span></a>
                         </li>
                         <li>
-                            <a href="app-user-view.html"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="View">View</span></a>
+                            <a href="/Downline/DirectList"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="View">Direct</span></a>
                         </li>
                         <li>
-                            <a href="app-user-edit.html"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Edit">Edit</span></a>
+                            <a href="/Downline/DownLineList"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Edit">Downline</span></a>
                         </li>
                     </ul>
                 </li>
 
+                <li class=" nav-item">
+                    <a href="#"><i class="feather icon-user"></i><span class="menu-title" data-i18n="User">Pin Management</span></a>
+                    <ul class="menu-content">
+                        <li>
+                            <a href="/Wallet/UnusedPins"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="List">Unused Pins</span></a>
+                        </li>
+                        <li>
+                            <a href="/Wallet/UsedPins"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="View">Used Pins</span></a>
+                        </li>
 
+                    </ul>
+                </li>
 
+                <li class=" nav-item">
+                    <a href="/User/UserReward"><i class="feather icon-check-square"></i><span class="menu-title" data-i18n="Todo">Rewards</span></a>
+                </li>
+
+                <li class=" nav-item">
+                    <a href="#"><i class="feather icon-user"></i><span class="menu-title" data-i18n="User">Payout</span></a>
+                    <ul class="menu-content">
+                        <li>
+                            <a href="/Wallet/PayoutLedger"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="List">Payout Wallet Ledger</span></a>
+                        </li>
+                        <li>
+                            <a href="/UserReports/UnPaidIncomes"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="View">Unpaid Income</span></a>
+                        </li>
+                        <li>
+                            <a href="/UserReports/PayoutReport"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="List">Payout Report</span></a>
+                        </li>
+                        <li>
+                            <a href="/UserReports/BusinessReport"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="View">Business Report</span></a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
@@ -704,7 +739,7 @@
     </div>
     <!-- End: Customizer-->
     <!-- Buynow Button-->
-   
+
     <div class="sidenav-overlay"></div>
     <div class="drag-target"></div>
     <!-- BEGIN: Footer-->
