--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Menu.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_Menu.cshtml
@@ -1,60 +1,44 @@
 ﻿@model HMGreenCityMLM.Models.Home
 
-<div class="navbar-content">
-    <!-- start: SIDEBAR -->
-    <div class="main-navigation navbar-collapse collapse">
+<ul class="navigation navigation-main" id="main-menu-navigation" data-menu="menu-navigation">
+
+    <li class="nav-item">
+        <a href="/Admin/AdminDashBoard"><i class="feather icon-mail"></i><span class="menu-title" data-i18n="Email">Dashboard</span></a>
+    </li>
+    @if (Model != null)
+    {
+        if (Model.lstMenu != null)
+        {
 
 
-        <!-- start: MAIN NAVIGATION MENU -->
-        <ul class="main-navigation-menu">
-            <li>
-                <!--active open-->
-                <a href="/Admin/AdminDashBoard">
-                    <i class="clip-home-3"></i>
-                    <span class="title"> Dashboard </span><span class="selected"></span>
-                </a>
-            </li>
-            @if (Model != null)
+            foreach (var item in Model.lstMenu)
             {
-                if (Model.lstMenu != null)
-                {
-
-
-                    foreach (var item in Model.lstMenu)
+                <li class=" nav-item">
+                    <a href="#"><i class="feather icon-shopping-cart"></i><span class="menu-title" data-i18n="Ecommerce">@item.MenuName</span></a>
+                    @if (item.Url == "#")
                     {
-                        <li>
-                            <a href="javascript:void(0)">
-                                <i class="@item.Icon"></i>
-                                <span class="title"> @item.MenuName </span><i class="icon-arrow"></i>
-                                <span class="selected"></span>
-                            </a>
-                            @if (item.Url == "#")
+                        <ul class="menu-content">
+                            @foreach (var item1 in Model.lstsubmenu)
                             {
-                                <ul class="sub-menu">
-                                    @foreach (var item1 in Model.lstsubmenu)
-                                    {
-                                        if (item1.MenuId == item.MenuId)
-                                        {
-                                            <li>
-                                                <a href="@item1.Url">
-                                                    <span class="title"> @item1.SubMenuName </span>
-
-                                                </a>
-                                            </li>
-                                        }
-                                    }
-
-
-                                </ul>
+                                if (item1.MenuId == item.MenuId)
+                                {
+                                    <li>
+                                        <a href="@item1.Url"><i class="feather icon-circle"></i><span class="menu-item" data-i18n="Shop">@item1.SubMenuName</span></a>
+                                    </li>
+                                }
                             }
-                        </li>
+
+
+
+                        </ul>
                     }
-                }
+                </li>
             }
+        }
+    }
 
 
-        </ul>
-        <!-- end: MAIN NAVIGATION MENU -->
-    </div>
-    <!-- end: SIDEBAR -->
-</div>
+
+
+
+</ul>
