layout design of associate forms

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/BinaryTree.cshtml
@@ -658,7 +658,7 @@
 
 <input type="hidden" id="firtsMemberID" value="@ViewBag.Fk_UserId" />
 
-<script src="../../vendor/jquery/jquery.min.js"></script>
+<script src="../../WebsiteCss/js/jquery.js"></script>
 
 <script type="text/javascript">
     var winHeight = $(window).height();
