--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/PaidPayout.cshtml
@@ -107,7 +107,7 @@
 }
 <script src="../vendor/jquery/jquery.min.js"></script>
 
-<script src="../../vendor/jquery/jquery.min.js"></script>
+<script src="../../WebsiteCss/js/jquery.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 <script>
