--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/UserProductReward.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/UserProductReward.cshtml
@@ -31,7 +31,7 @@
                                 <div class="card-block">
 
                                     <div class="dt-responsive table-responsive">
-                                        <table id="basic-btn" class="table table-striped table-bordered nowrap">
+                                         <table class="table mb-0" id="example23">
                                             <thead>
                                                 <tr>
                                                     <th>S No.</th>
