--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/TopUpByPin.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Admin/TopUpByPin.cshtml
@@ -49,7 +49,7 @@
     </div>
 </div>
 }
-<script src="../../vendor/jquery/jquery.min.js"></script>
+<script src="../../WebsiteCss/js/jquery.js"></script>
 <script>
   
     function getmembername() {
