--- a/HMGreenCityMLM/HMGreenCityMLM/Views/User/UserReward.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/User/UserReward.cshtml
@@ -7,79 +7,82 @@
 
 
 @using (Html.BeginForm("UserReward", "User", FormMethod.Post, new { @id = "form1" }))
-{ 
-    <div class="page-header">
-        <div class="page-block">
-            <div class="row align-items-center">
-                <div class="col-md-8">
-                    <div class="page-header-title">
-                        <h4 class="m-b-10">User Rewards</h4>
-                    </div>
-
-                </div>
+{
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
             </div>
-        </div>
-    </div>
-    <div class="pcoded-inner-content">
-        <div class="main-body">
-            <div class="page-wrapper">
-                <div class="page-body">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p style="color:red">@TempData["Rewardmsg"]</p>
-                            <div class="card">
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Rewards</span>
+                                        </a>
+                                    </li>
 
-                                <div class="card-block">
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
-                                    <div class="dt-responsive table-responsive">
-                                        <table id="basic-btn" class="table table-striped table-bordered nowrap">
-                                            <thead>
-                                                <tr>
-                                                    <th>S No.</th>
-                                                    <th>Reward</th>
-                                                    <th>Status</th>
-                                                    <th>Qualify Date</th>
-                                                    <th>Action</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @if (Model != null)
-                                                {
-                                                    if (Model.lsttopupreport != null)
+
+                                        <div class="dt-responsive table-responsive">
+                                            <table class="table mb-0" id="example23">
+                                                <thead>
+                                                    <tr>
+                                                        <th>S No.</th>
+                                                        <th>Reward</th>
+                                                        <th>Status</th>
+                                                        <th>Qualify Date</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @if (Model != null)
                                                     {
-                                                        int i = 1;
-                                                        foreach (var Item in Model.lsttopupreport)
+                                                        if (Model.lsttopupreport != null)
                                                         {
-                                                            <tr class="text-left">
-                                                                <td>@i</td>
-                                                                <td>
-                                                                    <img src="@Item.RewardImage" height="100" width="100" />
-                                                                    <br />@Item.RewardName
-                                                                </td>
-                                                                <td><label class="@Item.Contact">@Item.Status</label></td>
-                                                                <td>@Item.QualifyDate</td>
-                                                                <td>
-                                                                    @if (Item.Status == "Achieved")
-                                                                    {
-                                                                        <a class="btn btn-info btn-sm" href="/User/ClaimReward/@Item.PK_RewardItemId" onclick="return confirm('Are you sure you wish to claim this Award?');">Claim</a>
-                                                                        <a class="btn btn-warning btn-sm" href="/User/SkipReward/@Item.PK_RewardItemId" onclick="return confirm('Are you sure you wish to Skip this Award?');">Skip</a>
-                                                                    }
-                                                                </td>
-                                                            </tr>
-                                                            i++;
+                                                            int i = 1;
+                                                            foreach (var Item in Model.lsttopupreport)
+                                                            {
+                                                                <tr class="text-left">
+                                                                    <td>@i</td>
+                                                                    <td>
+                                                                        <img src="@Item.RewardImage" height="100" width="100" />
+                                                                        <br />@Item.RewardName
+                                                                    </td>
+                                                                    <td><label class="@Item.Contact">@Item.Status</label></td>
+                                                                    <td>@Item.QualifyDate</td>
+                                                                    <td>
+                                                                        @if (Item.Status == "Achieved")
+                                                                        {
+                                                                            <a class="btn btn-info btn-sm" href="/User/ClaimReward/@Item.PK_RewardItemId" onclick="return confirm('Are you sure you wish to claim this Award?');">Claim</a>
+                                                                            <a class="btn btn-warning btn-sm" href="/User/SkipReward/@Item.PK_RewardItemId" onclick="return confirm('Are you sure you wish to Skip this Award?');">Skip</a>
+                                                                        }
+                                                                    </td>
+                                                                </tr>
+                                                                i++;
+                                                            }
                                                         }
                                                     }
-                                                }
 
-                                            </tbody>
+                                                </tbody>
 
-                                        </table>
+                                            </table>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                </section>
             </div>
         </div>
     </div>
