--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/BusinessReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/BusinessReport.cshtml
@@ -6,123 +6,120 @@
 }
 
 
-<div class="row">
-    <div class="col-sm-12">
-
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                  Reports
-                </a>
-            </li>
-            <li class="active">
-                Business Report
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
 @using (Html.BeginForm("BusinessReport", "UserReports", FormMethod.Post, new { @id = "form1" }))
 {
-  
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Business Report
 
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
+    <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Business Report</span>
+                                        </a>
+                                    </li>
 
-                        <div class="col-md-12 table-responsive">
-                            <div class="row">
-                                
-                                <div class="col-md-3">
-                                    From Date
-                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From  Date" ,@readonly="read"})
-                                </div>
-                                <div class="col-md-3">
-                                    To Date
-                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To  Date", @readonly = "read" })
-                                </div>
-                              
-                                <div class="col-md-3">
-                                    Leg
-                                    @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.Leg, "Value", "Text"), new { @class = "form-control" })
-                                </div>
-                                <div class="col-md-3">
-                                    IsDownline
-                                   @Html.CheckBoxFor(m=>m.IsDownline)
-                                </div>
-                                <div class="col-md-3">
-                                    <br />
-                                    <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" />
-                                </div>
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
 
+                                        <div class="row">
+
+                                            <div class="col-md-12 table-responsive">
+                                                <div class="row">
+
+                                                    <div class="col-md-3">
+                                                        From Date
+                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @placeholder = "From  Date", @readonly = "read" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        To Date
+                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @placeholder = "To  Date", @readonly = "read" })
+                                                    </div>
+
+                                                    <div class="col-md-3">
+                                                        Leg
+                                                        @Html.DropDownListFor(m => m.Leg, new SelectList(ViewBag.Leg, "Value", "Text"), new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        IsDownline
+                                                        @Html.CheckBoxFor(m => m.IsDownline)
+                                                    </div>
+                                                    <div class="col-md-3">
+                                                        <br />
+                                                        <input type="submit" class="btn btn-info" value="Get Details" name="GetDetails" />
+                                                    </div>
+
+                                                </div>
+                                                <div class="dt-responsive table-responsive">
+                                                    <table class="table mb-0" id="example23">
+                                                        <thead>
+                                                            <tr>
+                                                                <th>Sr No.</th>
+                                                                <th>LoginId</th>
+                                                                <th>Name</th>
+
+                                                                <th>Closing Date</th>
+                                                                <th style="text-align:right">Amount</th>
+                                                                <th style="text-align:right">BV</th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            @if (Model != null)
+                                                            {
+                                                                if (Model.lstassociate != null)
+                                                                {
+                                                                    int i = 1;
+                                                                    foreach (var Item in Model.lstassociate)
+                                                                    {
+                                                                        <tr class="text-left">
+                                                                            <td>@i</td>
+                                                                            <td>@Item.LoginId</td>
+                                                                            <td>@Item.DisplayName</td>
+
+                                                                            <td>@Item.ClosingDate</td>
+                                                                            <td style="text-align:right">@Item.NetAmount</td>
+                                                                            <td style="text-align:right">@Item.LeadershipBonus</td>
+                                                                        </tr>
+                                                                        i++;
+                                                                    }
+
+                                                                }
+                                                            }
+                                                        </tbody>
+                                                        <tfoot>
+                                                            <tr>
+                                                                <td></td>
+                                                                <td></td>
+                                                                <td></td>
+                                                                <td>Total</td>
+                                                                <td style="text-align:right"><b style="color:blue;text-align:right">@ViewBag.TotalNetAmount</b></td>
+                                                                <td style="text-align:right"> <b style="color:blue;text-align:right">@ViewBag.TotalBV</b></td>
+                                                            </tr>
+                                                        </tfoot>
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>LoginId</th>
-                                        <th>Name</th>
-                                      
-                                        <th>Closing Date</th>
-                                        <th style="text-align:right">Amount</th>
-                                        <th style="text-align:right">BV</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lstassociate != null)
-                                        {
-                                            int i = 1;
-                                            foreach (var Item in Model.lstassociate)
-                                            {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>@Item.LoginId</td>
-                                                    <td>@Item.DisplayName</td>
-                                                
-                                                    <td>@Item.ClosingDate</td>
-                                                    <td style="text-align:right">@Item.NetAmount</td>
-                                                    <td style="text-align:right">@Item.LeadershipBonus</td>
-                                                </tr>
-                                                i++;
-                                            }
-
-                                        }
-                                    }
-                                </tbody>
-                                <tfoot>
-                                    <tr>
-                                        <td></td>
-                                        <td></td>
-                                        <td></td>
-                                        <td>Total</td>
-                                        <td style="text-align:right"><b style="color:blue;text-align:right">@ViewBag.TotalNetAmount</b></td>
-                                        <td style="text-align:right"> <b style="color:blue;text-align:right">@ViewBag.TotalBV</b></td>
-                                    </tr>
-                                </tfoot>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                </section>
             </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        <!-- partial -->
     </div>
-    <!-- main-panel ends -->
-
+                        <!-- main-panel ends -->
 }
 
 
