--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/PayoutReport.cshtml
@@ -8,105 +8,123 @@
     <div class="col-lg-12">
         <br />
         @*<h4 class="page-header">
-            <br />
-        </h4>*@
+                <br />
+            </h4>*@
     </div>
     <!-- /.col-lg-12 -->
 </div>
 @using (Html.BeginForm("PayoutReport", "UserReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
-{
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Payout Details
+{  <br />
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
             </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                <div class="row">
-                    <div class="col-lg-3">
-                        Payout No
-                        @Html.TextBoxFor(m => m.PayoutNo, new { @class = "form-control", @onclick = "return isNumberOrDecimal(event);" })
-                    </div>
-                   
-                    <div class="col-lg-3">
-                        <div class="form-group">
-                            <label>From Date  </label>
-                            @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="form-group">
-                            <label>To Date  </label>
-                            @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <br />
-                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
-                    </div>
-                </div>
-                 <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>Sr No.</th>
-                            <th>Login ID</th>
-                            <th>First Name</th>
-                            <th>Payout No</th>
-                            <th>Closing Date</th>
-                            <th>Direct Income</th>
-                            <th>Harmony</th>
-                            <th>Direct Leadership Bonus</th>
-                            <th>Gross Amount</th>
-                            <th>TDS Amount</th>
-                            <th>Processing Fee</th>
-                            <th>Product Wallet</th>
-                            <th>NET Amount</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @if (Model != null)
-                        {
-                            if (Model.lstPayoutDetail != null)
-                            {
-                                int i = 1;
-                                foreach (var Item in Model.lstPayoutDetail)
-                                {
-                            <tr class="text-left">
-                                <td>@i</td>
-                                <td>@Item.LoginId</td>
-                                <td>@Item.DisplayName</td>
-                                <td>@Item.PayoutNo</td>
-                                <td>@Item.ClosingDate</td>
-                                <td>@Item.DirectIncome</td>
-                                <td>@Item.BinaryIncome</td>
-                                <td>@Item.LeadershipBonus</td>
-                                <td>@Item.GrossAmount</td>
-                                <td>@Item.TDSAmount</td>
-                                <td>@Item.ProcessingFee</td>
-                                <td>@Item.ProductWallet</td>
-                                <td>@Item.NetAmount</td>
-                                <td>
-                                    <a href="/UserReports/PayoutReceipt?lid=@Item.EncryptLoginID&pno=@Item.EncryptPayoutNo" class="btn btn-sm btn-primary" target="_blank">Print</a>
-                                </td>
-                            </tr>
-                                    i++;
-                                }
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Payout Report</span>
+                                        </a>
+                                    </li>
 
-                            }
-                        }
-                    </tbody>
-                </table>
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+
+                                        <div class="row">
+                                            <div class="col-lg-3">
+                                                Payout No
+                                                @Html.TextBoxFor(m => m.PayoutNo, new { @class = "form-control", @onclick = "return isNumberOrDecimal(event);" })
+                                            </div>
+
+                                            <div class="col-lg-3">
+                                                <div class="form-group">
+                                                    <label>From Date  </label>
+                                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control", @readonly = "readonly" })
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <div class="form-group">
+                                                    <label>To Date  </label>
+                                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control", @readonly = "readonly" })
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <br />
+                                                <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+                                            </div>
+                                        </div>
+                                        <div class="dt-responsive table-responsive">
+                                            <table class="table mb-0" id="example23">
+                                                <thead>
+                                                    <tr>
+                                                        <th>Sr No.</th>
+                                                        <th>Login ID</th>
+                                                        <th>First Name</th>
+                                                        <th>Payout No</th>
+                                                        <th>Closing Date</th>
+                                                        <th>Direct Income</th>
+                                                        <th>Harmony</th>
+                                                        <th>Direct Leadership Bonus</th>
+                                                        <th>Gross Amount</th>
+                                                        <th>TDS Amount</th>
+                                                        <th>Processing Fee</th>
+                                                        <th>Product Wallet</th>
+                                                        <th>NET Amount</th>
+                                                        <th>Action</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    @if (Model != null)
+                                                    {
+                                                        if (Model.lstPayoutDetail != null)
+                                                        {
+                                                            int i = 1;
+                                                            foreach (var Item in Model.lstPayoutDetail)
+                                                            {
+                                                                <tr class="text-left">
+                                                                    <td>@i</td>
+                                                                    <td>@Item.LoginId</td>
+                                                                    <td>@Item.DisplayName</td>
+                                                                    <td>@Item.PayoutNo</td>
+                                                                    <td>@Item.ClosingDate</td>
+                                                                    <td>@Item.DirectIncome</td>
+                                                                    <td>@Item.BinaryIncome</td>
+                                                                    <td>@Item.LeadershipBonus</td>
+                                                                    <td>@Item.GrossAmount</td>
+                                                                    <td>@Item.TDSAmount</td>
+                                                                    <td>@Item.ProcessingFee</td>
+                                                                    <td>@Item.ProductWallet</td>
+                                                                    <td>@Item.NetAmount</td>
+                                                                    <td>
+                                                                        <a href="/UserReports/PayoutReceipt?lid=@Item.EncryptLoginID&pno=@Item.EncryptPayoutNo" class="btn btn-sm btn-primary" target="_blank">Print</a>
+                                                                    </td>
+                                                                </tr>
+                                                                i++;
+                                                            }
+
+                                                        }
+                                                    }
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                </section>
             </div>
-            <!-- /.panel-body -->
         </div>
-        <!-- /.panel -->
     </div>
-    <!-- /.col-lg-12 -->
-</div>
 }
- 
+
 
 <script>
     $(document).ready(function () {
@@ -116,7 +134,7 @@
     });
 </script>
 
-<script src="../../vendor/jquery/jquery.min.js"></script>
+<script src="../../WebsiteCss/js/jquery.js"></script>
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 
