--- a/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/UnPaidIncomes.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/UserReports/UnPaidIncomes.cshtml
@@ -4,72 +4,82 @@
     ViewBag.Title = "UnPaidIncomes";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<div class="row">
-    <div class="col-lg-12">
-        <br />
-        @*<h4 class="page-header">Topup Report</h4>*@
-
-    </div>
-    <!-- /.col-lg-12 -->
-</div>
-
-<div class="row">
-    <div class="col-lg-12">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Unpaid Incomes
-            </div>
-            <!-- /.panel-heading -->
-            <div class="panel-body">
-                 <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                        <tr>
-                            <th>Sr No.</th>
-                            <th>Date</th>
-                            <th>From LoginId</th>
-                            <th>From Name</th>
-                            <th>Amount</th>
-
-                            <th>Income Type</th>
-
-                            
-
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @if (Model != null)
-                        {
-                            if (Model.lstunpaidincomes != null)
-                            {
-                                int i = 1;
-                                foreach (var Item in Model.lstunpaidincomes)
-                                {
-                            <tr class="text-left">
-                                <td>@i</td>
-                                <td>@Item.Date</td>
-                                <td>@Item.FromLoginId</td>
-                                <td>@Item.FromUserName</td>
-
-                                <td>@Item.Amount</td>
-
-                                <td>@Item.IncomeType</td>
-                               
-                            </tr>
-                                    i++;
-                                }
-
-                            }
-                        }
-                    </tbody>
-                </table>
-
-            </div>
-            <!-- /.panel-body -->
+<br />
+<div class="app-content content">
+    <div class="content-overlay"></div>
+    <div class="header-navbar-shadow"></div>
+    <div class="content-wrapper">
+        <div class="content-header row">
         </div>
-        <!-- /.panel -->
+        <div class="content-body">
+            <!-- users edit start -->
+            <section class="users-edit">
+                <div class="card">
+                    <div class="card-content">
+                        <div class="card-body">
+                            <ul class="nav nav-tabs mb-3" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                       aria-controls="account" role="tab" aria-selected="true">
+                                        <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Unpaid Incomes</span>
+                                    </a>
+                                </li>
+
+                            </ul>
+                            <div class="tab-content">
+                                <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+
+                                    <div class="dt-responsive table-responsive">
+                                        <table class="table mb-0" id="example23">
+                                            <thead>
+                                                <tr>
+                                                    <th>Sr No.</th>
+                                                    <th>Date</th>
+                                                    <th>From LoginId</th>
+                                                    <th>From Name</th>
+                                                    <th>Amount</th>
+
+                                                    <th>Income Type</th>
+
+
+
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @if (Model != null)
+                                                {
+                                                    if (Model.lstunpaidincomes != null)
+                                                    {
+                                                        int i = 1;
+                                                        foreach (var Item in Model.lstunpaidincomes)
+                                                        {
+                                                <tr class="text-left">
+                                                    <td>@i</td>
+                                                    <td>@Item.Date</td>
+                                                    <td>@Item.FromLoginId</td>
+                                                    <td>@Item.FromUserName</td>
+
+                                                    <td>@Item.Amount</td>
+
+                                                    <td>@Item.IncomeType</td>
+
+                                                </tr>
+                                                            i++;
+                                                        }
+
+                                                    }
+                                                }
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
-    <!-- /.col-lg-12 -->
 </div>
 
 <script src="../vendor/jquery/jquery.min.js"></script>
