--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Wallet/Topup.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Wallet/Topup.cshtml
@@ -58,7 +58,7 @@
     </div>
 </div>
 }
-<script src="../../vendor/jquery/jquery.min.js"></script>
+<script src="../../WebsiteCss/js/jquery.js"></script>
 <script>
   
   
