--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Wallet/TransferEwalletToEwallet.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Wallet/TransferEwalletToEwallet.cshtml
@@ -51,7 +51,7 @@
     </div>
 </div>
 }
-<script src="../../vendor/jquery/jquery.min.js"></script>
+<script src="../../WebsiteCss/js/jquery.js"></script>
 
 <script>
   
