Changes in admin pages

--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Setting/ChangePassword.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Setting/ChangePassword.cshtml
@@ -6,115 +6,122 @@
 }
 
 
-<div class="row">
-    <div class="col-lg-12">
-        <br />
-        @*<h4 class="page-header">Change Associate Password</h4>*@
-    </div>
-    <!-- /.col-lg-12 -->
-</div>
+
 
 @using (Html.BeginForm("ChangeAdminPassword", "Setting", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
-    
+
     <p style="color: red">@TempData["ChangeAsspassword"] </p>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Change Admin Password
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Change Password</span>
+                                        </a>
+                                    </li>
 
-                    @*<div class="row">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                Login Id <span style="color: red">*</span>
-                                @Html.TextBoxFor(m => m.LoginId, new { @class = "form-control", @Placeholder = "Login Id", @onchange = "getmembername(this);" })
-                                @Html.ValidationMessageFor(m => m.LoginId)
-                            </div>
-                        </div>
-                    </div>*@
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+                                        <div class="row">
 
-                    <div class="row">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                Old Password <span style="color: red">*</span>
-                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", @Placeholder = "Old Password" })
+                                            <div class="col-md-12 table-responsive">
+                                                <div class="row">
+                                                    <div class="col-md-2"></div>
+                                                    <div class="col-md-4">
+                                                        <div class="form-group">
+                                                            Old Password <span style="color: red">*</span>
+                                                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @Placeholder = "Old Password" })
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="row">
+                                                    <div class="col-md-2"></div>
+                                                    <div class="col-md-4">
+                                                        <div class="form-group">
+                                                            New Password <span style="color: red">*</span>
+                                                            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @Placeholder = "New Password" })
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                                <div class="row">
+                                                    <div class="col-md-6">
+                                                        <div class="form-group">
+                                                            <input class="btn btn-success pull-right" onclick="return validateform()" type="submit" value="Change Password" />
+                                                        </div>
+                                                    </div>
+                                                </div>
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-
-                    <div class="row">
-                        <div class="col-md-2"></div>
-                        <div class="col-md-4">
-                            <div class="form-group">
-                                New Password <span style="color: red">*</span>
-                                @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @Placeholder = "New Password" })
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input class="btn btn-success pull-right" onclick="return validateform()" type="submit" value="Change Password" />
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+                </section>
             </div>
         </div>
     </div>
 }
-<script>
-    function validateform() {
-        $(".errortext").removeClass("errortext");
-        if ($('#Password').val() == '') {
-            $("#Password").addClass('errortext');
-            $('#Password').focus();
-            return false;
-        }
-        if ($('#NewPassword').val() == '') {
-            $("#NewPassword").addClass('errortext');
-            $('#NewPassword').focus();
-            return false;
-        }
-        
-        return true;
-    }
+                                <script>
+                                    function validateform() {
+                                        $(".errortext").removeClass("errortext");
+                                        if ($('#Password').val() == '') {
+                                            $("#Password").addClass('errortext');
+                                            $('#Password').focus();
+                                            return false;
+                                        }
+                                        if ($('#NewPassword').val() == '') {
+                                            $("#NewPassword").addClass('errortext');
+                                            $('#NewPassword').focus();
+                                            return false;
+                                        }
 
-    function getmembername() {
-        debugger;
-        var LoginId = $('#LoginId').val();
-        $.ajax({
-            url: '/Setting/GetMemberName',
-            type: "GET",
-            dataType: "JSON",
-            data: { LoginId: LoginId },
-            success: function (data) {
-                debugger;
-                if (data.Result == "Yes") {
-                    $('#txtname').html(data.DisplayName);
+                                        return true;
+                                    }
 
-                    divname.style.display = "block";
-                } else {
-                    alert("Invalid Sponser Id");
-                    $('#txtname').html("");
-                    $('#LoginId').val("");
+                                    function getmembername() {
+                                        debugger;
+                                        var LoginId = $('#LoginId').val();
+                                        $.ajax({
+                                            url: '/Setting/GetMemberName',
+                                            type: "GET",
+                                            dataType: "JSON",
+                                            data: { LoginId: LoginId },
+                                            success: function (data) {
+                                                debugger;
+                                                if (data.Result == "Yes") {
+                                                    $('#txtname').html(data.DisplayName);
 
-                }
-            }
-        });
-    }
-</script>
-<style>
-    .errortext {
-        border: 1px solid red !important;
-        background-color: #fff0f0 !important;
-    }
-</style>
+                                                    divname.style.display = "block";
+                                                } else {
+                                                    alert("Invalid Sponser Id");
+                                                    $('#txtname').html("");
+                                                    $('#LoginId').val("");
+
+                                                }
+                                            }
+                                        });
+                                    }
+                                </script>
+                                <style>
+                                    .errortext {
+                                        border: 1px solid red !important;
+                                        background-color: #fff0f0 !important;
+                                    }
+                                </style>
