--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Shared/_AdminLayout.cshtml
@@ -226,7 +226,7 @@
 
                         <li class="dropdown dropdown-user nav-item">
                             <a class="dropdown-toggle nav-link dropdown-user-link" href="#" data-toggle="dropdown">
-                                <div class="user-nav d-sm-flex d-none"><span class="user-name text-bold-600">@Session["FullName"]</span><span class="user-status">@Session["Status"]</span></div><span><img class="round" src="@Session["Profile"]" alt="avatar" height="40" width="40"></span>
+                                <div class="user-nav d-sm-flex d-none"><span class="user-name text-bold-600">@Session["Name"]</span><span class="user-status"></span></div><span><img class="round" src="../../AssociatePanelcss/app-assets/images/portrait/small/avatar-s-11.jpg" alt="avatar" height="40" width="40"></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right">
 
@@ -243,7 +243,7 @@
         <div class="navbar-header">
             <ul class="nav navbar-nav flex-row">
                 <li class="nav-item mr-auto">
-                    <a class="navbar-brand" href="/User/AssociateDashBoard">
+                    <a class="navbar-brand" href="/Admin/AdminDashBoard">
                         <div class="brand-logo"></div>
                         <h2 class="brand-text mb-0">HM Green City</h2>
                     </a>
