--- a/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/AdminReports/AssociateIncomeReport.cshtml
@@ -4,148 +4,145 @@
     ViewBag.Title = "AssociateIncomeReport";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<div class="row">
-    <div class="col-sm-12">
-
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Payout
-                </a>
-            </li>
-            <li class="active">
-                Daily Income Report
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
 
 @using (Html.BeginForm("AssociateIncomeReport", "AdminReports", FormMethod.Post, new { @id = "form1", enctype = "multipart/form-data" }))
 {
 
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Income Details
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Daily Income</span>
+                                        </a>
+                                    </li>
 
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+                                        <div class="row">
 
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
+                                            <div class="col-md-12 table-responsive">
+                                                <div class="row">
+                                                    <div class="col-lg-3">
+                                                        From Date
+                                                        @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        To Date
+                                                        @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        Login ID
+                                                        @Html.TextBoxFor(m => m.ToLoginID, new { @class = "form-control" })
+                                                    </div>
 
-                        <div class="col-md-12 table-responsive">
-                            <div class="row">
-                                <div class="col-lg-3">
-                                    From Date
-                                    @Html.TextBoxFor(m => m.FromDate, new { @class = "form-control" })
-                                </div>
-                                <div class="col-lg-3">
-                                    To Date
-                                    @Html.TextBoxFor(m => m.ToDate, new { @class = "form-control" })
-                                </div>
-                                <div class="col-lg-3">
-                                    Login ID
-                                    @Html.TextBoxFor(m => m.ToLoginID, new { @class = "form-control" })
-                                </div>
+                                                    <div class="col-lg-3">
+                                                        <div class="form-group">
+                                                            <label> Name </label>
+                                                            @Html.TextBoxFor(m => m.ToName, new { @class = "form-control" })
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <div class="form-group">
+                                                            <label>Status  </label>
+                                                            @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.PaidStatus, "Value", "Text"), new { @class = "form-control" })
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-lg-3">
+                                                        <br />
+                                                        <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
+                                                    </div>
+                                                </div>
+                                                <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Sr No.</th>
+                                                            <th>Date</th>
+                                                            <th> LoginID</th>
+                                                            <th> Name</th>
+                                                            <th>Amount</th>
+                                                            <th>Income Type</th>
+                                                            <th>Status</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @if (Model != null)
+                                                        {
+                                                            if (Model.lsttopupreport != null)
+                                                            {
+                                                                int i = 1;
+                                                                foreach (var Item in Model.lsttopupreport)
+                                                                {
+                                                        <tr class="text-left">
+                                                            <td>@i</td>
+                                                            <td>@Item.TransactionDate</td>
+                                                            <td>@Item.ToLoginID</td>
+                                                            <td>@Item.ToName</td>
+                                                            <td>@Item.Amount</td>
+                                                            <td>@Item.IncomeType</td>
+                                                            <td>@Item.Status</td>
 
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label> Name </label>
-                                        @Html.TextBoxFor(m => m.ToName, new { @class = "form-control"  })
+                                                        </tr>
+                                                                    i++;
+                                                                }
+
+                                                            }
+                                                        }
+                                                    </tbody>
+                                                </table>
+
+                                            </div>
+                                        </div>
+
                                     </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <div class="form-group">
-                                        <label>Status  </label>
-                                        @Html.DropDownListFor(m => m.Status, new SelectList(ViewBag.PaidStatus, "Value", "Text"), new { @class = "form-control" })
-                                    </div>
-                                </div>
-                                <div class="col-lg-3">
-                                    <br />
-                                    <input class="btn btn-success" type="submit" value="Search" name="Search" id="btnSearch" />
                                 </div>
                             </div>
-                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>Date</th>
-                                        <th> LoginID</th>
-                                        <th> Name</th>
-                                        <th>Amount</th>
-                                        <th>Income Type</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                            {
-                                if (Model.lsttopupreport != null)
-                                {
-                                    int i = 1;
-                                    foreach (var Item in Model.lsttopupreport)
-                                    {
-                                    <tr class="text-left">
-                                        <td>@i</td>
-                                        <td>@Item.TransactionDate</td>
-                                        <td>@Item.ToLoginID</td>
-                                        <td>@Item.ToName</td>
-                                        <td>@Item.Amount</td>
-                                        <td>@Item.IncomeType</td>
-                                        <td>@Item.Status</td>
-
-                                    </tr>
-                                        i++;
-                                    }
-
-                                }
-                            }
-                                </tbody>
-                            </table>
-
+                            <!-- content-wrapper ends -->
+                            <!-- partial:../../partials/_footer.html -->
+                            <!-- partial -->
                         </div>
+                        <!-- main-panel ends -->
                     </div>
-
-                </div>
+                </section>
             </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        <!-- partial -->
     </div>
-    <!-- main-panel ends -->
-
 }
 
-<script src="../..//WebsiteCss/js/jquery.min.js"></script>
+                        <script src="../..//WebsiteCss/js/jquery.min.js"></script>
 
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
+                        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+                        <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.0/themes/smoothness/jquery-ui.css">
 
-<script>
+                        <script>
 
-    $('#FromDate').datepicker({
-       dateFormat: 'dd/mm/yy',
-    });
+                            $('#FromDate').datepicker({
+                                dateFormat: 'dd/mm/yy',
+                            });
 
-    $('#ToDate').datepicker({
-       dateFormat: 'dd/mm/yy',
-    });
+                            $('#ToDate').datepicker({
+                                dateFormat: 'dd/mm/yy',
+                            });
 
-    function isNumberOrDecimal(evt) {
-        var charCode = (evt.which) ? evt.which : evt.keyCode;
-        if (charCode != 46 && charCode > 31
-          && (charCode < 48 || charCode > 57))
-            return false;
+                            function isNumberOrDecimal(evt) {
+                                var charCode = (evt.which) ? evt.which : evt.keyCode;
+                                if (charCode != 46 && charCode > 31
+                                  && (charCode < 48 || charCode > 57))
+                                    return false;
 
-        return true;
-    }
+                                return true;
+                            }
 
-</script>
+                        </script>
