--- a/HMGreenCityMLM/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeDetails.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/EmployeeRegistration/EmployeeDetails.cshtml
@@ -6,93 +6,88 @@
 }
 
 
-<div class="row">
-    <div class="col-sm-12">
-
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Permission
-                </a>
-            </li>
-            <li class="active">
-                Employee List
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
 
 @using (Html.BeginForm("PayoutReport", "AdminReport", FormMethod.Post, new { @id = "form1" }))
 {
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Product Master
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Employee List</span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+                                        <div class="row">
+                                            <div class="col-md-12 table-responsive">
+                                                <table class="table mb-0" id="example23">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Sr No.</th>
+                                                            <th>Name</th>
+                                                            <th> Login Id</th>
+                                                            <th>Qualififcation</th>
+                                                            <th>Contact No</th>
+                                                            <th>Email Id</th>
 
 
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-12 table-responsive">
-                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>Sr No.</th>
-                                        <th>Name</th>
-                                        <th> Login Id</th>
-                                        <th>Qualififcation</th>
-                                        <th>Contact No</th>
-                                        <th>Email Id</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @if (Model != null)
+                                                        {
+                                                            if (Model.lstemp != null)
+                                                            {
+                                                                int i = 1;
+                                                                foreach (var item in Model.lstemp)
+                                                                {
+
+                                                                    <tr>
+                                                                        <td>@i</td>
+                                                                        <td>@Html.DisplayFor(m => item.Name)</td>
+                                                                        <td>@Html.DisplayFor(m => item.LoginId)</td>
+                                                                        <td>@Html.DisplayFor(m => item.EducationQualififcation)</td>
+
+                                                                        <td>@Html.DisplayFor(m => item.Mobile)</td>
+                                                                        <td>@Html.DisplayFor(m => item.Email)</td>
+
+                                                                    </tr>
 
 
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lstemp != null)
-                                        {
-                                            int i = 1;
-                                            foreach (var item in Model.lstemp)
-                                            {
-
-                                                <tr>
-                                                    <td>@i</td>
-                                                    <td>@Html.DisplayFor(m => item.Name)</td>
-                                                    <td>@Html.DisplayFor(m => item.LoginId)</td>
-                                                    <td>@Html.DisplayFor(m => item.EducationQualififcation)</td>
-
-                                                    <td>@Html.DisplayFor(m => item.Mobile)</td>
-                                                    <td>@Html.DisplayFor(m => item.Email)</td>
-
-                                                </tr>
-
-
-                                                i++;
-                                            }
-                                        }
-                                    }
-                                </tbody>
-                            </table>
+                                                                    i++;
+                                                                }
+                                                            }
+                                                        }
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- content-wrapper ends -->
+                            <!-- partial:../../partials/_footer.html -->
+                            <!-- partial -->
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
-        <!-- content-wrapper ends -->
-        <!-- partial:../../partials/_footer.html -->
-        <!-- partial -->
     </div>
-        <!-- main-panel ends -->
-
-
 }
 
 
