--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Master/ProductList.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Master/ProductList.cshtml
@@ -4,101 +4,99 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<div class="row">
-    <div class="col-sm-12">
 
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Master
-                </a>
-            </li>
-            <li class="active">
-                Product List
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
 @using (Html.BeginForm("ProductList", "Master", FormMethod.Post, new { @id = "form1", name = "formKYC" }))
 {
     <span style="color: red">
         @TempData["Product"]
     </span>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Product Master
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
+            </div>
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Package List</span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+                                        <div class="row">
+                                            <div class="col-md-12 table-responsive">
+                                                <table class="table mb-0" id="example23">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>S No.</th>
+                                                            <th>Product Name</th>
+                                                            <th>Product Price</th>
+                                                            <th>IGST</th>
+                                                            <th>CGST</th>
+                                                            <th>SGST</th>
+                                                            <th>Binary Percent</th>
+
+                                                            <th>BV</th>
+                                                            <th>Action</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @if (Model != null)
+                                                        {
+                                                            if (Model.lstproduct != null)
+                                                            {
+                                                                int i = 1;
+                                                                foreach (var Item in Model.lstproduct)
+                                                                {
+                                                                    <tr class="text-left">
+                                                                        <td>@i</td>
+                                                                        <td>@Item.ProductName</td>
+                                                                        <td>@Item.ProductPrice</td>
+                                                                        <td>@Item.IGST</td>
+                                                                        <td>@Item.CGST</td>
+                                                                        <td>@Item.SGST</td>
+                                                                        <td>@Item.BinaryPercent</td>
+                                                                        <td>@Item.BV</td>
+
+                                                                        <td>
+                                                                            <a href="/Master/ProductMaster?productID=@Item.ProductID" class="btn btn-info btn-sm">Edit</a>
+                                                                            <a href="/Master/DeleteProduct/@Item.ProductID" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Product?');" name="btnDelete">Delete</a>
+                                                                            @*<a href="/Master/EditProduct/@Item.ProductID" runat="server" class="btn btn-info btn-sm pull-right" name="btnEdit">Edit</a>*@
+
+                                                                        </td>
+
+                                                                    </tr>
+
+                                                                    i++;
+                                                                }
+                                                            }
+                                                        }
 
 
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-12 table-responsive">
-                            <table id="example23" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr>
-                                        <th>S No.</th>
-                                        <th>Product Name</th>
-                                        <th>Product Price</th>
-                                        <th>IGST</th>
-                                        <th>CGST</th>
-                                        <th>SGST</th>
-                                        <th>Binary Percent</th>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
 
-                                        <th>BV</th>
-                                        <th>Action</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @if (Model != null)
-                                    {
-                                        if (Model.lstproduct != null)
-                                        {
-                                            int i = 1;
-                                            foreach (var Item in Model.lstproduct)
-                                            {
-                                                <tr class="text-left">
-                                                    <td>@i</td>
-                                                    <td>@Item.ProductName</td>
-                                                    <td>@Item.ProductPrice</td>
-                                                    <td>@Item.IGST</td>
-                                                    <td>@Item.CGST</td>
-                                                    <td>@Item.SGST</td>
-                                                    <td>@Item.BinaryPercent</td>
-                                                    <td>@Item.BV</td>
-
-                                                    <td>
-                                                        <a href="/Master/ProductMaster?productID=@Item.ProductID" class="btn btn-info btn-sm">Edit</a>
-                                                        <a href="/Master/DeleteProduct/@Item.ProductID" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this Product?');" name="btnDelete">Delete</a>
-                                                        @*<a href="/Master/EditProduct/@Item.ProductID" runat="server" class="btn btn-info btn-sm pull-right" name="btnEdit">Edit</a>*@
-                                                       
-                                                    </td>
-
-                                                </tr>
-
-                                                i++;
-                                            }
-                                        }
-                                    }
-
-
-                                </tbody>
-                            </table>
                         </div>
                     </div>
-                </div>
+                </section>
             </div>
         </div>
-       
     </div>
-
 }
 
 
