--- a/HMGreenCityMLM/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
+++ b/HMGreenCityMLM/HMGreenCityMLM/Views/Permission/SetPermission.cshtml
@@ -3,139 +3,136 @@
     ViewBag.Title = "SetPermission";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<div class="row">
-    <div class="col-sm-12">
 
-        <ol class="breadcrumb">
-            <li>
-                <i class="clip-home-3"></i>
-                <a href="#">
-                    Permission
-                </a>
-            </li>
-            <li class="active">
-                Set Permission
-            </li>
-
-        </ol>
-
-
-    </div>
-</div>
-<br />
 @using (Html.BeginForm("SetPermission", "Permission", FormMethod.Post, new { @class = "tr-form" }))
 {
     <span style="color: red">
         @TempData["Permission"]
     </span>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    Product Master
-
-
-                </div>
-                <!-- /.panel-heading -->
-                <div class="panel-body">
-                    
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="form-group row">
-                                    <label class="col-sm-3 col-form-label">Select User <span style="color: red">*</span></label>
-                                    <div class="col-sm-9">
-                                        @Html.DropDownListFor(m => m.Fk_UserId, new SelectList(ViewBag.ddluser, "Value", "Text"), new { @class = "form-control" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group row">
-                                    <label class="col-sm-3 col-form-label">Select Main Menu <span style="color: red">*</span></label>
-                                    <div class="col-sm-9">
-                                        @Html.DropDownListFor(m => m.Fk_FormTypeId, new SelectList(ViewBag.ddlformtype, "Value", "Text"), new { @class = "form-control" })
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="form-group row">
-                                    <label class="col-sm-3 col-form-label"></label>
-                                    <div class="col-sm-9">
-                                        <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" />
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-12 table-responsive">
-                                <table id="example23333" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
-                                    <thead>
-                                        <tr>
-                                            <th>Sr No.</th>
-                                            <th>Form</th>
-
-                                            <th>Form View</th>
-
-
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        @if (Model != null)
-                                        {
-                                            if (Model.lstpermission != null)
-                                            {
-                                                int i = 1;
-                                                foreach (var item in Model.lstpermission)
-                                                {
-
-                                                    <tr>
-                                                        <td>@i</td>
-                                                        <td>
-                                                            @Html.DisplayFor(m => item.FormName)
-
-                                                        </td>
-
-
-
-                                                        <td>
-                                                            <input type="hidden" name="hdFormtypeId_ @i" id="hdFormtypeId_ @i" value="@item.Fk_FormTypeId" />
-                                                            <input type="hidden" name="hdFormId_ @i" id="hdFormId_ @i" value="@item.Fk_FormId" />
-                                                            <input type="hidden" name="hdLoginid_ @i" id="hdLoginid_ @i" value="@item.Fk_UserId" />
-                                                            <input type="checkbox" name="chkSelect_ @i" id="chkSelect_ @i" @item.SelectedValue />
-
-
-
-                                                        </td>
-
-                                                    </tr>
-                                                    i++;
-                                                }
-                                                <input type="hidden" id="hdRows" name="hdRows" value="@i" />
-                                            }
-                                        }
-                                    </tbody>
-                                </table>
-
-
-                            </div>
-                        </div>
-
-                        <br />
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="form-group">
-                                    <input type="submit" id="Save" name="Save" class="btn btn-success" value="Update" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+    <div class="app-content content">
+        <div class="content-overlay"></div>
+        <div class="header-navbar-shadow"></div>
+        <div class="content-wrapper">
+            <div class="content-header row">
             </div>
-            <!-- content-wrapper ends -->
-            <!-- partial:../../partials/_footer.html -->
-            <!-- partial -->
+            <div class="content-body">
+                <!-- users edit start -->
+                <section class="users-edit">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="card-body">
+                                <ul class="nav nav-tabs mb-3" role="tablist">
+                                    <li class="nav-item">
+                                        <a class="nav-link d-flex align-items-center active" id="account-tab" data-toggle="tab" href="#account"
+                                           aria-controls="account" role="tab" aria-selected="true">
+                                            <i class="feather icon-user mr-25"></i><span class="d-none d-sm-block">Set Permission</span>
+                                        </a>
+                                    </li>
+
+                                </ul>
+                                <div class="tab-content">
+                                    <div class="tab-pane active" id="account" aria-labelledby="account-tab" role="tabpanel">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label">Select User <span style="color: red">*</span></label>
+                                                    <div class="col-sm-9">
+                                                        @Html.DropDownListFor(m => m.Fk_UserId, new SelectList(ViewBag.ddluser, "Value", "Text"), new { @class = "form-control" })
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label">Select Main Menu <span style="color: red">*</span></label>
+                                                    <div class="col-sm-9">
+                                                        @Html.DropDownListFor(m => m.Fk_FormTypeId, new SelectList(ViewBag.ddlformtype, "Value", "Text"), new { @class = "form-control" })
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <div class="form-group row">
+                                                    <label class="col-sm-3 col-form-label"></label>
+                                                    <div class="col-sm-9">
+                                                        <input type="submit" id="GetDetails" name="GetDetails" class="btn btn-primary" value="Get Details" />
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="row">
+                                            <div class="col-md-12 table-responsive">
+                                                <table id="example23333" class="display nowrap table table-hover table-striped table-bordered" cellspacing="0" width="100%">
+                                                    <thead>
+                                                        <tr>
+                                                            <th>Sr No.</th>
+                                                            <th>Form</th>
+
+                                                            <th>Form View</th>
+
+
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        @if (Model != null)
+                                                        {
+                                                            if (Model.lstpermission != null)
+                                                            {
+                                                                int i = 1;
+                                                                foreach (var item in Model.lstpermission)
+                                                                {
+
+                                                        <tr>
+                                                            <td>@i</td>
+                                                            <td>
+                                                                @Html.DisplayFor(m => item.FormName)
+
+                                                            </td>
+
+
+
+                                                            <td>
+                                                                <input type="hidden" name="hdFormtypeId_ @i" id="hdFormtypeId_ @i" value="@item.Fk_FormTypeId" />
+                                                                <input type="hidden" name="hdFormId_ @i" id="hdFormId_ @i" value="@item.Fk_FormId" />
+                                                                <input type="hidden" name="hdLoginid_ @i" id="hdLoginid_ @i" value="@item.Fk_UserId" />
+                                                                <input type="checkbox" name="chkSelect_ @i" id="chkSelect_ @i" @item.SelectedValue />
+
+
+
+                                                            </td>
+
+                                                        </tr>
+                                                                    i++;
+                                                                }
+                                                        <input type="hidden" id="hdRows" name="hdRows" value="@i" />
+                                                            }
+                                                        }
+                                                    </tbody>
+                                                </table>
+
+
+                                            </div>
+                                        </div>
+
+                                        <br />
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="form-group">
+                                                    <input type="submit" id="Save" name="Save" class="btn btn-success" value="Update" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- content-wrapper ends -->
+                            <!-- partial:../../partials/_footer.html -->
+                            <!-- partial -->
+                        </div>
+                        <!-- main-panel ends -->
+                    </div>
+                </section>
+            </div>
         </div>
-        <!-- main-panel ends -->
-   
+    </div>
 }
